2019-08-12  Dmitriy Anisimkov  <anisimko@adacore.com>

	* libgnat/g-socket.adb (Is_IPv6_Address): Check that no less
	then 2 colons in IPv6 numeric address.

2019-08-12  Dmitriy Anisimkov  <anisimko@adacore.com>

	* libgnat/g-comlin.ads, libgnat/g-comlin.adb (Getopt): Add
	parameter Quiet. Need to do not output error messages to
	console. Invalid_Switch exception generation surrounded by an
	error message.

2019-08-12  Ed Schonberg  <schonberg@adacore.com>

	* exp_ch6.adb (Expand_Actuals. Add_Call_By_Copy_Code): Add code
	to generate proper checks when an actual for an in-out or out
	parameter has a non-null access type.  No constraints are
	applied to an inbound access parameter, but on exit a not-null
	check must be performed if the type of the actual requires it.

2019-08-12  Ed Schonberg  <schonberg@adacore.com>

	* sem_util.adb (Is_Expaned_Priority_Attribute): Check whether
	call comes from a rewritten attribute before comparing name with
	Get_Ceiling run-time subprogram.

2019-08-12  Eric Botcazou  <ebotcazou@adacore.com>

	* exp_util.ads (Component_May_Be_Bit_Aligned): Small comment
	tweaks.
	(Possible_Bit_Aligned_Component): Likewise.
	(Type_May_Have_Bit_Aligned_Components): Likewise.
	* exp_util.adb (Component_May_Be_Bit_Aligned): Likewise.
	(Possible_Bit_Aligned_Component): Likewise.
	(Type_May_Have_Bit_Aligned_Components): Likewise.

2019-08-12  Eric Botcazou  <ebotcazou@adacore.com>

	* exp_ch4.adb (Expand_N_Op_Eq): Expand the array equality if
	either operand is a possibly unaligned slice.
	* exp_ch6.adb (Expand_Simple_Function_Return): Do not generate a
	copy for a possibly unaligned object if it is represented as a
	scalar.
	* exp_util.adb (Is_Possibly_Unaligned_Slice): Do not always
	return false if the target doesn't have strict alignment.

2019-08-12  Bob Duff  <duff@adacore.com>

	* sem_ch12.adb (Instantiate_Package_Body): Remove suppression of
	checks in instances of internal units.
	* sem_ch6.adb (Analyze_Function_Return): Do not generate a